Bug 211290 PRBool nsTemplateMatchRefSet::Add doesn't check the return value of PL_DHashTableInit r=dbaron sr=bz